bk_ida/gccida/g2/count_one_set
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/count_one_set/src/loop.c:3969:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v6.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/count_one_set/src/loop.c:4008:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v14 = ( ( unsigned int)( mode_class_0[v15] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/count_one_set/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/count_one_set/src/loop.c:4047:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v6.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/count_one_set/src/obj/loop.o] Error 1
